- Vignette updated accordingly

version 1.0.9: (2017-08-04)
- newBASiCS_Data : added check to ensure SpikeInfo is a data.frame
- BASiCS_TestDE : default value for EpsilonM & EpsilonD has changed
- Vignette + examples updated accordingly

version 1.0.10: (2017-08-06)
- BASiCS_TestDE : changes in output messages
- Gene name added in plot method for BASiCS_Chain objects

version 1.0.11: (2017-08-06)
- BASiCS_VarianceDecomp : small bugs fixed (unused Data object)
- colnames fixed on cell-specific slots ChainSC and ChainRNA
- Rcpp::checkUserInterrupt() activated in C++ code for interruptions
- 'grDevices' added as dependency

version 1.0.11: (2017-08-13)
- 'WithSpikes' argument removed from 'BASiCS_LoadChain' function

version 1.0.12: (2017-08-14)
- 'SummarizedExperiment' class replaced by 'SingleCellExperiment'
- Updated vignette

version 1.0.13: (2017-08-15)
- Minor changes to documentation
- Minor changes to vignette

version 1.1.0: (2017-08-16)
- Minor changes required to pass BiocCheck (used formatR and BiocChecks)

version 0.99.0: (2017-08-28)
- Minor changes to complete Bioconductor submission checklist
- Version re-numbered according to Bioconductor guidelines

version 0.99.2: (2017-09-18)
- 'newBASiCS_Data': format + checks moved to `HiddenChecksBASiCS_Data` function
- `HiddenChecksBASiCS_Data`: use of colMeans2, rowMeans2
- Format in welcome message

- DEVELOPMENT NOTES (potential future changes):
  * Delete BASiCS_VarianceDecomp? 
  * Change plots to use ggplot2?
  * Should we separate BASiCS_TestDE in two functions? 
  * In plots, change axis labels to be text (no greek)?
  * Implement BASiCS_Denoise in C++
  * Create 'no longer in use' message for selected functions. 
  * Implement change suggested by Giacomo Zanella
  * Add checks to BASiCS_MCMC verify SE object has all the required info. 
  * Store all necessary parameters for chain restart
  * Convert Rcpp print to messages

  
  
  